[package]
name = "vxbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.6", features = ["framework", "standard_framework"] }
tokio = {version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.75"
